--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
 	"activationEvents": [
 		"*"
 	],
+	"homepage": "https://github.com/OOlashyn/portal-helper-vscode",
+	"bugs": {
+		"url": "https://github.com/OOlashyn/portal-helper-vscode/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/OOlashyn/portal-helper-vscode.git"
+	},
 	"license": "MIT",
 	"icon": "icon/icon.png",
 	"main": "./out/extension.js",
@@ -37,6 +45,11 @@
 				"command": "portal-helper-vscode.upload",
 				"category": "Portal Helper",
 				"title": "Upload Portal"
+			},
+			{
+				"command": "portal-helper-vscode.uploadCurrent",
+				"category": "Portal Helper",
+				"title": "Upload Current Portal"
 			},
 			{
 				"command": "portal-helper-vscode.listProfiles",
@@ -59,13 +72,25 @@
 				"title": "Switch Auth Profile"
 			}
 		],
-		"keybindings": {
-			"command": "portal-helper-vscode.upload",
-			"key": "ctrl+u",
-			"args": {"local": true}
-		}
+		"keybindings": [
+			{
+				"command": "portal-helper-vscode.upload",
+				"key": "ctrl+u ctrl+p"
+			},
+			{
+				"command": "portal-helper-vscode.uploadCurrent",
+				"key": "ctrl+u ctrl+c"
+			},
+			{
+				"command": "portal-helper-vscode.list",
+				"key": "ctrl+l ctrl+p"
+			},
+			{
+				"command": "portal-helper-vscode.download",
+				"key": "ctrl+d ctrl+p"
+			}
+		]
 	},
-	
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
@@ -86,5 +111,6 @@
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0"
-	}
+	},
+	"dependencies": {}
 }
