--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portal-helper-vscode",
-	"displayName": "portal-helper-VSCode",
+	"displayName": "Power Apps Portal Helper",
 	"description": "Set of commands to simplify work with Power Apps CLI for Portals",
 	"publisher": "oleksandr-olashyn",
 	"version": "1.0.0",
