--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
 				"key": "ctrl+d ctrl+l"
 			}
 		],
-		"configuration":[
+		"configuration": [
 			{
 				"title": "Portal Helper",
 				"properties": {
@@ -163,7 +163,8 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.3",
@@ -176,6 +177,7 @@
 		"glob": "^7.1.6",
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
+		"vsce": "^2.10.0",
 		"vscode-test": "^1.5.0"
 	},
 	"dependencies": {
