--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "portal-helper-vscode",
-	"displayName": "Power Apps Portal Helper",
-	"description": "Set of commands to simplify work with Power Apps CLI for Portals",
+	"displayName": "Power Pages Helper",
+	"description": "Set of commands to simplify work with Power Platform CLI for Power Pages/Power Apps Portals",
 	"publisher": "oleksandr-olashyn",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"engines": {
 		"vscode": "^1.55.0"
 	},
@@ -53,6 +53,11 @@
 				"command": "portal-helper-vscode.uploadCurrent",
 				"category": "Portal Helper",
 				"title": "Upload Current Portal"
+			},
+			{
+				"command": "portal-helper-vscode.bootstrapMigrate",
+				"category": "Portal Helper",
+				"title": "Migrate to Bootstrap 5"
 			},
 			{
 				"command": "portal-helper-vscode.listProfiles",
